--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
-golang-github-prometheus-client-golang (1.14.0-1) UNRELEASED; urgency=medium
+golang-github-prometheus-client-golang (1.14.0-2) UNRELEASED; urgency=medium
 
+  [ TODO ]
   * Initial release (Closes: TODO)
 
- -- TODO <TODO>  Sat, 18 Mar 2023 18:14:24 +0000
+  [ André Roth ]
+  * bump version 1.14.0-2
+
+ -- André Roth <andre.roth@roche.com>  Sat, 18 Mar 2023 19:18:19 +0100
